# pycrysfml2008

./: .gitignore  .gitlab-ci.yml  AUTHORS.txt  CMakeLists.txt  CrysFML.code-workspace  README.md  pycrysfml08.md
BuildServer/: build_linux.sh  build_linux_cmake.sh  build_windows.bat
BuildServer/Docker/: Dockerfile_bionic_ifort_build_F2008  Dockerfile_bionic_ifort_setup  Dockerfile_focal_gfortran_build_F2008  Dockerfile_focal_gfortran_setup  Dockerfile_focal_ifort_build_F2008  Dockerfile_focal_ifort_build_cmake  Dockerfile_focal_ifort_setup  Dockerfile_focal_ifx_build_F2008  Dockerfile_jammy_ifort_build_F2008  Dockerfile_jammy_ifort_setup  Dockerfile_latest_ifort_build_F2008  Dockerfile_latest_ifort_setup  Dockerfile_xenial_ifort_build_F2008  Dockerfile_xenial_ifort_setup
BuildServer/Machines/: ci-sci-win-1.bat
cmake/: add_prefix.cmake  add_suffix.cmake  find_external_libraries.cmake  set_compiler_flags.cmake  set_linker_flags.cmake
doc/: notas.txt
doc/cfml_atoms/: check_symmetry_constraints.ipynb  extend_atom_list.ipynb
doc/cfml_bckpeaks/: automatic_pkb_search.ipynb
doc/cfml_gspacegroups/: allocate_kvector.ipynb  equal_group_1.ipynb  equal_group_2.ipynb  generators.ipynb  get_multip_pos.ipynb  get_op_from_symb.ipynb  get_symb_from_mat.ipynb  set_spacegroup.ipynb
doc/cfml_ioform/: read_xtal_structure.ipynb
doc/cfml_metrics/: change_setting_cell_1.ipynb  change_setting_cell_2.ipynb  get_betas_from_biso.ipynb  get_betas_from_u.ipynb  get_conventional_cell.ipynb  get_twofold_axes.ipynb  get_u_from_b.ipynb  get_u_from_betas.ipynb  set_crystal_cell.ipynb
doc/cfml_reflections/: ex_gener_reflections1.ipynb  ex_gener_reflections2.ipynb  ex_gener_reflections_shub.ipynb  ex_get_h_info.ipynb  ex_h_absent.ipynb  ex_h_equiv.ipynb  ex_h_mult.ipynb  ex_h_s.ipynb  h_uni.ipynb  hkl_gen_sxtal.ipynb
scripts/linux/: make_ifort_api_crysfml08.sh  make_ifort_crysfml08.sh  make_ifort_pycrysfml08.sh  make_pycrysfml08.sh
scripts/permutations_optional_args/: permute_kwargs.py
scripts/test/: test.py
scripts/windows/: make_ifort_api_crysfml08.bat  make_ifort_pycrysfml08.bat
src/: CMakeLists.txt  api_init.f90  forpy_mod.f90  py_cfml_atoms.F90  py_cfml_atoms.f90  py_cfml_bckpeaks.f90  py_cfml_diffpatt.F90  py_cfml_diffpatt.f90  py_cfml_gspacegroups.F90  py_cfml_gspacegroups.f90  py_cfml_ioform.F90  py_cfml_ioform.f90  py_cfml_metrics.F90  py_cfml_metrics.f90  py_cfml_profiles.F90  py_cfml_profiles.f90  py_cfml_reflections-savegood.f90  py_cfml_reflections.F90  py_cfml_reflections.f90  py_cfml_structure_factors.F90  py_cfml_structure_factors.f90  py_cfml_sxtal_geom.F90  py_cfml_sxtal_geom.f90  py_cfml_vtk.F90  py_cfml_vtk.f90  py_extension_cfml_diffpatt.f90  py_extension_cfml_export_vtk.f90  py_extension_cfml_ioform.f90  py_extension_cfml_messages.f90  py_extension_cfml_reflections.f90  py_extension_cfml_sxtal_geom.f90  wraps_cfml_atoms.f90  wraps_cfml_metrics.f90  wraps_cfml_reflections.f90
